--- a/index.html
+++ b/index.html
@@ -28,21 +28,51 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-        <div class="icons">
+        <div class="icon-web">
+            <div class="icons">
+                <ul>
+                    <li>
+                        <input type="text" placeholder="Search Product" name="" id="">
+                        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    </li>
+                    <li>
+                        <a href="loginReg.html"><i class="fa-regular fa-user"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa-regular fa-bell"></i></a>
+                        <span class="count">0</span>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                    </li>
+                    <li class="menu-button" onclick="showSidebar()">
+                        <a href="#"><i class="fa-solid fa-bars"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="icon-mob">
+            <div class="mob-head">
+                <ul>
+                    <li>
+                        <a href="#"><i class="fa-regular fa-bell"></i></a>
+                        <span class="count">0</span>
+                    </li>
+                    <li class="menu-button" onclick="showSidebar()">
+                        <a href="#"><i class="fa-solid fa-bars"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="sidebar">
             <ul>
-                <li>
-                    <input type="text" placeholder="Search Product" name="" id="">
-                    <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-                </li>
-                <li><a href="loginReg.html"><i class="fa-regular fa-user"></i></a></li>
-                <li>
-                    <a href="#"><i class="fa-regular fa-bell"></i></a>
-                    <span class="count">0</span>
-                </li>
-                <li>
-                    <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                    <span class="count">0</span>
-                </li>
+                <p>Menu <a href="#" onclick="hideSidebar()"><i class="fa-solid fa-xmark"></i></a></p><hr>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -113,5 +143,30 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="icons">
+            <ul>
+                <li>
+                    <a href="#"><i class="fa-solid fa-house"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                </li>
+                <li class="grip">
+                    <a href="#"><i class="fa-solid fa-grip-vertical"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                </li>
+                <li>
+                    <a href="loginReg.html"><i class="fa-regular fa-user"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
